--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "reizu"
+description = "Provides a namespace for reizu crates"
 version = "0.1.0"
-edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/reizu/reizu_rust"
+keywords = ["reizu"]
+authors = ["George Moschovitis <gmosx@reizu.org>"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
 
 [dependencies]
